--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mobileftpserver"
+    package="com.dy.mobileftpserver"
     android:versionCode="1"
     android:versionName="1.0" >
 
